--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -51,7 +51,7 @@
     }
 
     .navbar__mobile--list {
-        display: block;
+        display: none;
         position: absolute;
         padding: 1.5rem;
         top: 90%;
