adding responsive design to the existing porject hidden list and details and so

--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -389,4 +389,9 @@
         min-width: auto;
         margin: 0;
     }
+
+    .footer__text {
+        width: 100%;
+        font-size: 1.3rem;
+    }
 }
